# rift-kv

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml  build.rs
common/proto/: kv.proto
common/src/: lib.rs
db_50051/: 000008.sst  000013.sst  IDENTITY  LOG  LOG.old.1770431064376908  LOG.old.1770431187992016  MANIFEST-000015
db_50052/: 000008.sst  000013.sst  IDENTITY  LOG  LOG.old.1770431068730472  LOG.old.1770431190287715  MANIFEST-000015
db_50053/: 000008.sst  000013.sst  IDENTITY  LOG  LOG.old.1770431069135260  LOG.old.1770431191532828  MANIFEST-000015
server/: Cargo.toml
server/src/: main.rs  storage.rs
